--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "normalize.css": "^7.0.0",
+    "octicons": "^5.0.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "~5.0.2",
     "zone.js": "0.8.14"
