--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "octicons": "^5.0.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "~5.0.2",
+    "typicons.font": "^2.0.9",
     "zone.js": "0.8.14"
   },
   "devDependencies": {
